<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ds_bg"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/ds_page_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_sm"
            android:text="@string/wallpaper_title"
            style="@style/DsTitle" />

        <TextView
            android:id="@+id/wallpaper_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_md"
            android:text="@string/wallpaper_loading"
            style="@style/DsBody"
            android:textColor="@color/ds_text_muted" />

        <TextView
            android:id="@+id/wallpaper_device_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_md"
            style="@style/DsSmall"
            android:textColor="@color/ds_text_muted" />

        <Button
            android:id="@+id/wallpaper_upload_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_md"
            android:text="@string/wallpaper_upload"
            style="@style/DsButton" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/wallpaper_enabled_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_md"
            android:text="@string/wallpaper_enforcement_enabled" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_xs"
            android:text="@string/wallpaper_check_interval"
            style="@style/DsSmall"
            android:textColor="@color/ds_text_muted" />

        <EditText
            android:id="@+id/wallpaper_interval_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_md"
            android:inputType="number"
            android:hint="@string/wallpaper_check_interval_hint"
            android:importantForAutofill="no" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/wallpaper_dismiss_apps_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_md"
            android:text="@string/wallpaper_dismiss_apps" />

        <Button
            android:id="@+id/wallpaper_save_options_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_xl"
            android:text="@string/wallpaper_save_options"
            style="@style/DsButton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_sm"
            android:text="@string/wallpaper_consequences_title"
            style="@style/DsSectionTitle" />

        <TextView
            android:id="@+id/wallpaper_scenarios_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_sm"
            android:text="@string/wallpaper_scenarios_empty"
            style="@style/DsBody"
            android:textColor="@color/ds_text_muted" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_xs"
            android:text="@string/wallpaper_scenario_event"
            style="@style/DsSmall"
            android:textColor="@color/ds_text_muted" />

        <Spinner
            android:id="@+id/wallpaper_scenario_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_sm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_xs"
            android:text="@string/wallpaper_scenario_delay"
            style="@style/DsSmall"
            android:textColor="@color/ds_text_muted" />

        <EditText
            android:id="@+id/wallpaper_scenario_delay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_sm"
            android:inputType="number"
            android:text="30"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_xs"
            android:text="@string/wallpaper_scenario_action"
            style="@style/DsSmall"
            android:textColor="@color/ds_text_muted" />

        <Spinner
            android:id="@+id/wallpaper_scenario_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_sm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_xs"
            android:text="@string/wallpaper_scenario_seconds"
            style="@style/DsSmall"
            android:textColor="@color/ds_text_muted" />

        <EditText
            android:id="@+id/wallpaper_scenario_seconds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_sm"
            android:inputType="number"
            android:text="3600"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/wallpaper_add_scenario_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_sm"
            android:text="@string/wallpaper_add_scenario"
            style="@style/DsButton" />

        <Button
            android:id="@+id/wallpaper_clear_scenarios_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_xl"
            android:text="@string/wallpaper_clear_scenarios"
            style="@style/DsButton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_sm"
            android:text="@string/wallpaper_verification_title"
            style="@style/DsSectionTitle" />

        <TextView
            android:id="@+id/wallpaper_verification_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_sm"
            android:text="@string/wallpaper_verification_idle"
            style="@style/DsBody"
            android:textColor="@color/ds_text_muted" />

        <Spinner
            android:id="@+id/wallpaper_verification_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_sm" />

        <Button
            android:id="@+id/wallpaper_start_verification_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ds_space_xl"
            android:text="@string/wallpaper_start_verification"
            style="@style/DsButton" />

        <Button
            android:id="@+id/wallpaper_open_leverage_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wallpaper_open_leverage"
            style="@style/DsButton" />
    </LinearLayout>
</ScrollView>
