<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ds_bg"
    android:orientation="vertical"
    android:padding="@dimen/ds_page_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ds_space_sm"
        android:text="@string/cornertime_title"
        style="@style/DsTitle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ds_space_md"
        android:text="@string/cornertime_lead"
        style="@style/DsBody"
        android:textColor="@color/ds_text_muted" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/ds_space_md"
        app:cardBackgroundColor="@color/ds_surface"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp">

        <androidx.camera.view.PreviewView
            android:id="@+id/cornertime_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/cornertime_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ds_space_xs"
        android:text="@string/cornertime_status_idle"
        style="@style/DsBody" />

    <TextView
        android:id="@+id/cornertime_violations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ds_space_xs"
        android:text="@string/cornertime_violations"
        style="@style/DsSmall"
        android:textColor="@color/ds_text_muted" />

    <TextView
        android:id="@+id/cornertime_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ds_space_sm"
        android:visibility="gone"
        style="@style/DsSmall"
        android:textColor="@color/ds_magenta" />

    <CheckBox
        android:id="@+id/cornertime_voice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ds_space_sm"
        android:checked="true"
        android:text="@string/cornertime_voice_enabled"
        style="@style/DsBody" />

    <TextView
        android:id="@+id/cornertime_voice_pick_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ds_space_xs"
        android:text="@string/cornertime_voice_pick"
        style="@style/DsSmall"
        android:textColor="@color/ds_text_muted" />

    <Spinner
        android:id="@+id/cornertime_voice_pick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ds_space_md" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/cornertime_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/ds_space_sm"
            android:text="@string/cornertime_start"
            style="@style/DsButton" />

        <Button
            android:id="@+id/cornertime_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/cornertime_stop"
            style="@style/DsButtonSecondary" />
    </LinearLayout>
</LinearLayout>
